# Material_Takeoff

./: .gitignore  CHANGELOG.md  DEPLOYMENT_STATUS.md  PROJECT_STORY.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  dev-start.bat  dev-start.sh  nginx.conf  nixpacks.toml  package.json  railway.json  railway.toml  render.yaml  vercel.json
backend/: Dockerfile.disabled  add_operations_columns.py  analyze_master_labor.py  comprehensive_materials_importer.py  create_materials_table.py  create_tables.py  demo_custom_labor.py  demo_plate_logic.py  extract_labor_chart.py  fix_project_schema.py  import_blake_materials.py  material_import_validation_report.md  migrate_add_blake_fields.py  migrate_materials.py  migrate_project_id_to_string.py  migrate_simple.py  populate_comprehensive_materials.py  populate_materials.py  populate_materials_comprehensive.py  pyproject.toml  requirements.txt  simple_db_test.py  simple_main.py  test_comprehensive_db.py  test_create_project.py  test_db_connection.py  test_labor_api.py  test_plate_error.py  test_plate_simple.py  test_templates_server.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  data_migration.py  database.py  material_migration.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: coating_system.py  document.py  labor_operation.py  labor_settings.py  material.py  nesting.py  project.py  takeoff.py  takeoff_item.py  template.py  user.py
backend/app/routers/: auth.py  documents.py  health.py  materials.py
backend/app/schemas/: document.py  (+3 more)
(+66 files in other folders)
