[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "capitol-takeoff-api"
version = "0.1.0"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]",
  "pydantic>=2",
  "SQLAlchemy>=2",
  "psycopg2-binary",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "pandas", "openpyxl", "reportlab", "python-docx",
]